kubernetes/k8s.elasticsearch.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.3
        ports:
        - containerPort: 9200
        resources:
          limits:
            memory: "1.5Gi"
            cpu: "1"
          requests:
            memory: "1Gi"
            cpu: "0.5"
