kubernetes/k8s.elasticsearch.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
spec:
  defaultBackend:
    service:
      name: elasticsearch-server
      port:
        number: 9200
  ingressClassName: tailscale
  tls:
    - hosts:
        - elasticsearch
